# dispersion_equalizer

./: .gitignore  Cargo.toml  LICENSE  README.md  bundler.toml  deploy_plugins.bat  package_release.ps1  plan.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: pre_spec.md  preview.html  release.md  ui_sync_empty_track_fix_2026-05-30.md
scripts/: click_test.py  demo_automation.py  pedalboard_smoke.py  screenshot.ps1
src/: editor.rs  lib.rs  main.rs  params.rs
src/compiler/: descriptor.rs  greedy.rs  mod.rs
src/dsp/: allpass.rs  chain.rs  crossfade.rs  delay_line.rs  engine.rs  mod.rs  smooth.rs
src/gui/: graph.rs  inspector.rs  mod.rs  node_view.rs  theme.rs
src/model/: mod.rs  node.rs  preset.rs  scale.rs
tests/: test_vst_blackbox.py
xtask/src/: main.rs
